maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: expected class or object definition
def keepHandOnSideWall(): Int={
^Escaper:35: error: Unmatched closing brace '}' ignored here
    }
    ^Escaper:41: error: expected class or object definition
def Nord(){
^Escaper:64: error: Unmatched closing brace '}' ignored here
}
^